cmake_minimum_required(VERSION 3.27)
project(C_pp_Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(src_ch2_1 src/ch2_1.cpp)
add_executable(src_ch2_2 src/ch2_2.cpp)
add_executable(src_ch2_3 src/ch2_3.cpp)
add_executable(src_ch2_4 src/ch2_4.cpp)
add_executable(src_ch2_5 src/ch2_5.cpp)
add_executable(src_ch2_6 src/ch2_6.cpp)
add_executable(src_ch2_7 src/ch2_7.cpp)
add_executable(src_ch3_1 src/ch3_1.cpp)
add_executable(src_ch3_2 src/ch3_2.cpp)
add_executable(src_ch3.3 src/ch3_3.cpp)
add_executable(src_ch3_3 src/ch3_3.cpp)
add_executable(src_ch3_4 src/ch3_4.cpp)
add_executable(src_ch3_5 src/ch3_5.cpp)