cmake_minimum_required(VERSION 3.27)
project(C_pp_Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(src_ch2_1 src/ch2_1.cpp)
add_executable(src_ch2_2 src/ch2_2.cpp)
add_executable(src_ch2_3 src/ch2_3.cpp)
add_executable(src_ch2_4 src/ch2_4.cpp)
add_executable(src_ch2_5 src/ch2_5.cpp)
add_executable(src_ch2_6 src/ch2_6.cpp)
add_executable(src_ch2_7 src/ch2_7.cpp)

add_executable(src_ch3_1 src/ch3_1.cpp)
add_executable(src_ch3_2 src/ch3_2.cpp)
add_executable(src_ch3.3 src/ch3_3.cpp)
add_executable(src_ch3_3 src/ch3_3.cpp)
add_executable(src_ch3_4 src/ch3_4.cpp)
add_executable(src_ch3_5 src/ch3_5.cpp)
add_executable(src_ch3_6 src/ch3_6.cpp)
add_executable(src_ch3_7 src/ch3_7.cpp)

add_executable(src_ch4_1 src/ch4_1.cpp)
add_executable(src_ch4_2 src/ch4_2.cpp)
add_executable(src_ch4_3 src/ch4_3.cpp)
add_executable(src_ch4_4 src/ch4_4.cpp)
add_executable(src_ch4_5 src/ch4_5.cpp)
add_executable(src_ch4_6 src/ch4_6.cpp)
add_executable(src_ch4_7 src/ch4_7.cpp)
add_executable(src_ch4_8 src/ch4_8.cpp)
add_executable(src_ch4_9 src/ch4_9.cpp)
add_executable(src_ch4_10 src/ch4_10.cpp)

add_executable(src_ch5_1 src/ch5_1.cpp)
add_executable(src_ch5_2 src/ch5_2.cpp)
add_executable(src_ch5_3 src/ch5_3.cpp)
add_executable(src_ch5_4 src/ch5_4.cpp)
add_executable(src_ch5_5 src/ch5_5.cpp)
add_executable(src_ch5_6 src/ch5_6.cpp)
add_executable(src_ch5_7 src/ch5_7.cpp)
add_executable(src_ch5_8 src/ch5_8.cpp)
add_executable(src_ch5_9 src/ch5_9.cpp)
add_executable(src_ch5_10 src/ch5_10.cpp)

add_executable(src_ch6_1 src/ch6_1.cpp)
add_executable(src_ch6_2 src/ch6_2.cpp)

add_executable(src_ch6_3 src/ch6_3.cpp)
add_executable(src_ch6_4 src/ch6_4.cpp)
add_executable(src_ch6_5 src/ch6_5.cpp)
add_executable(src_ch6_6 src/ch6_6.cpp)
add_executable(main main.cpp)